Don't invalidate ascii files when you reset them.

BUG: 394448
Apply fix suggested by reporter.  Ascii files don't actually ever
check to see if an ascii file is valid so there is no point
in invalidating it.